--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     name: product-service
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/productdb
+#    url: jdbc:postgresql://localhost:5432/productdb
+    url: jdbc:postgresql://ep-lively-shape-ah0gs78k-pooler.c-3.us-east-1.aws.neon.tech/product?sslmode=require&channel_binding=require
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
   jpa:
