--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,18 +3,16 @@ spring:
     name: product-service
 
   datasource:
-#    url: jdbc:postgresql://localhost:5432/productdb
-    url: jdbc:mysql://localhost:3307/testing
-    username: ${MYSQL_USER}
-    password: ${MYSQL_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/productdb
+#    url: jdbc:mysql://localhost:3307/testing
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
   jpa:
+    database: POSTGRESQL
     show-sql: true
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQLDialect
-    properties:
-      hibernate:
-        format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 server:
   port: 8081
