--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,30 +2,5 @@ spring:
   application:
     name: product-service
 
-  datasource:
-    url: jdbc:postgresql://localhost:5432/productdb
-#    url: jdbc:mysql://localhost:3307/testing
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
-  jpa:
-    database: POSTGRESQL
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-server:
-  port: 8081
-
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2-console
-#  datasource:
-#    url: jdbc:h2:mem:test
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: create
-
-
+  config:
+    import: optional:configserver:http://localhost:8888
